# mineclone

./: .gitignore  CMakeLists.txt  Makefile  run.sh
data/: top_down_sprites.png:Zone.Identifier
src/: animation.cpp  animation.h  app.cpp  app.h  game.cpp  game.h  gameObject.h  main.cpp  timer.cpp  timer.h
